--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,17 @@
+body {
+  margin: 0;
+  display: flex;
+  justify-content: center;
+
+  padding: 62px 82px 0px 62px;
+
+  /* background-color:rgba(156, 188, 210, 0.1); */
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  width: 730px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 55px;
 }
